=== Safari-83 ===

2003-06-07  Darin Adler  <darin@apple.com>

        * English.lproj/StringsNotToBeLocalized.txt: Updated for recent changes.

2003-06-07  Darin Adler  <darin@apple.com>

        Rolled out Chris's fix for 3156169 because it was causing a lot of crashes
        and problems with basic behavior. We can try again later.
        
        One of the problems was that Back wasn't working. Another was that you could
        not follow the link at the top of the page at kbb.com. More testing seemed to
        reveal still more problems.
        
        * WebView.subproj/WebFramePrivate.h: Rolled back to previous version.
        * WebView.subproj/WebFramePrivate.m: Ditto.

2003-06-06  Richard Williamson  <rjw@apple.com>

	Fixed 3283236.  Remove use of forward declarations in public header because
	CodeWarrior pukes on 'em.

        Reviewed by Chris.

        * WebView.subproj/WebDataSource.h:

2003-06-06  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3156169>: cmd-click opens new win but stops loading in prev win

        Reviewed by darin.

        * WebView.subproj/WebFramePrivate.h: added policyDataSource and policyLoadType as ivars
        * WebView.subproj/WebFramePrivate.m:
        (-[WebFramePrivate dealloc]): added ASSERT
        (-[WebFramePrivate setProvisionalDataSource:]): added ASSERT
        (-[WebFrame _isLoadComplete]): formatting tweak
        (-[WebFrame _invalidatePendingPolicyDecisionCallingDefaultAction:]): clear policyDataSource
        (-[WebFrame _checkNewWindowPolicyForRequest:action:frameName:formState:andCall:withSelector:]): formatting tweak
        (-[WebFrame _checkNavigationPolicyForRequest:dataSource:formState:andCall:withSelector:]): retain policyDataSource
        (-[WebFrame _continueAfterNavigationPolicy:]): stop the load, set the load type, set the provisional data source in the "use" case
        (-[WebFrame _loadURL:referrer:loadType:target:triggeringEvent:form:formValues:]): formatting tweak